# harbor

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
config/: settings.yaml  workspaces.yaml
scripts/: setup_oauth.py  test_sources.py
src/: main.py  settings.py
src/delivery/: email_digest.py  sms.py
src/delivery/templates/: digest.html
src/integrations/: supabase.py
src/intelligence/: claude.py  prompts.py  schema.py  triage.py
src/privacy/: redaction.py
src/queue/: connection.py  jobs.py  scheduler.py  workers.py
src/reporting/: follow_through.py
src/sources/: calendar.py  github.py  gmail.py  hedy.py
src/state/: checkpoints.py  db.py  drafts.py  transitions.py
src/utils/: auth.py  filters.py  http.py  timestamps.py
supabase/migrations/: 0001_assistant_console.sql  0002_checkpoints.sql
tests/: test_claude_parser.py  test_draft_filtering.py  test_follow_through_report.py  test_gmail_source.py  test_hedy_source.py  test_idempotency.py  test_redaction.py  test_schema_fallback.py  test_state_machine.py  test_supabase_sync.py
web/: .env.example  middleware.ts  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  tsconfig.typecheck.tmp.tsbuildinfo
web/app/: error.tsx  globals.css  layout.tsx  page.tsx
web/app/[workspaceSlug]/: ActionButtons.tsx  actions.ts  error.tsx  page.tsx
web/app/api/session/: route.ts
web/app/login/: page.tsx
web/lib/: contracts.ts  dashboard.ts  workspaces.ts
web/lib/supabase/: server.ts
web/scripts/: typecheck.mjs
(+4 files in other folders)
